infra/k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: dingdong
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
